src/test/deca/context/invalid/class/field/wrong_init_int.deca
// Description:
//    Déclaration d'un champ de type inconnu
//
// Resultats:
//    undefined A
// 
// Historique:
//    cree le 01/01/2016

class C {
	A a = 5;
}

{

}
